add purple marker

--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
         </div>
         <div class="nav-wrapper">
             <ul class="nav right hide-on-med-and-down">
-                <li><a href="#weather-section">Weather</a></li>
-                <li><a href="#search-bar">Search Bar</a></li>
+                <!-- <li><a href="#weather-section">Weather</a></li> -->
+                <li><a href="#search-bar">Search Restrooms</a></li>
                 <li><a href="#results-section">Results</a></li>
                 <li><a href="#map">Map</a></li>
             </ul>
             <ul id="nav-mobile" class="nav sidenav">
-                <li><a href="#weather-section">Weather</a></li>
-                <li><a href="#search-bar">Search Bar</a></li>
+                <!-- <li><a href="#weather-section">Weather</a></li> -->
+                <li><a href="#search-bar">Search Restrooms</a></li>
                 <li><a href="#results-section">Results</a></li>
                 <li><a href="#map">Map</a></li>
             </ul>
@@ -77,9 +77,17 @@
     </nav>
 
     <div class="body-container">
+                <!-- <div id="openweathermap-widget-15"></div> -->
+      <!-- <div class="row"> -->
+        <!-- <div id="weather-section" class="col s12 m12 l5"> -->
+        <!-- <div class="card-panel grey lighten-5 hoverable"> -->
+        <!-- <h4 class="light-blue-text"><i class="material-icons">wb_sunny</i> Weather</h4> -->
+        <!-- <div id="openweathermap-widget-15"></div> -->
+        <!-- </div> -->
+        <!-- </div> -->
         <div id="search-bar" class="col s12 m12 l12">
             <div class="row" id="row1">
-                <h3 class="heading">Search</h3>
+                <h3 class="heading">Search Restrooms</h3>
 
                 <form class="form-wrapper col s12 l12">
                     <!-- <div class="row" id="form-row"> -->
